gcc/testsuite/rust/rustc/ui/parser/issues/issue-58856-2.rs
struct Empty;

trait Howness {}

impl Howness for () {
    fn how_are_you(&self -> Empty {
        Empty
    }
} // { dg-error "" "" { target *-*-* } }

fn main() {}

